# Packboiler

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.sh
examples/forge/: automatic-20.1.hjson
spec/: Template.md
src/: __init__.py  __main__.py  colors.py  logger.py  packwiz.py  template_loader.py
src/packboiler/: __init__.py  __main__.py  colors.py  logger.py  packwiz.py  template_loader.py
templates/forge/: 20.1-curseforge.hjson  20.1-modrinth.hjson  20.1.hjson
